--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -17,12 +17,13 @@
     </div>
     <div class="form-group">
         <label asp-for="LanguageId"><strong>Select Language</strong></label>
-        <select id="mySelect" asp-for="LanguageId" class="form-control">
+        <select asp-for="LanguageId" asp-items="@Model.Languages" size="5" aria-label="size 5 select example" class="form-select form-control"></select>
+       @* <select id="mySelect" asp-for="LanguageId" class="form-control">
             @foreach (var language in Model.Languages)
             {
                 <option value="@language.Id">@language.Name</option>
             }
-        </select>
+        </select>*@
     </div>
     <div class="form-group justify-content-center">
         <label asp-for="PagesCount"><strong>Number of Pages</strong></label>
@@ -31,12 +32,13 @@
     </div>
     <div class="form-group">
         <label asp-for="CategoryId"><strong>Select Category</strong></label>
-        <select id="mySelect" asp-for="CategoryId" class="form-control">
+        <select asp-for="CategoryId" asp-items="@Model.Categories" size="5" aria-label="size 5 select example" class="form-select form-control"></select>
+        @*<select id="mySelect" asp-for="CategoryId" class="form-control">
             @foreach (var category in Model.Categories)
             {
                 <option value="@category.Id">@category.Name</option>
             }
-        </select>
+        </select>*@
     </div>
     <div class="form-group justify-content-center">
         <label asp-for="PublishedYear"><strong>Year</strong></label>
