--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book"></i>@GlobalConstants.SystemName</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Quote" asp-action="All">Quotes</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Book" asp-action="Favorites">Favorite Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
