--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -237,7 +237,7 @@
                 var data = { bookId: bookId, value: value };
                 $.ajax({
                     type: "POST",
-                    url: "/api/Vote",
+                    url: "/api/Rating",
                     data: JSON.stringify(data),
                     headers: {
                         'X-CSRF-TOKEN': antiForgeryToken
