--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <section class="animate__animated animate__zoomIn welcomeSection">
     <div class="text-center textContainer col-8">
-        <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-hand-sparkles"></i></h1>
+        <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-book"></i></h1>
     </div>
     <div class="card border-dark blockquote-card">
         <div class="card-header">
