--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using Bookworm.Web.ViewModels.Categories
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
+@using Bookworm.Web.ViewModels.Quizzes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
