--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-
 <section class="animate__animated animate__zoomIn welcomeSection">
     <div class="text-center textContainer col-8">
         <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-book"></i></h1>
@@ -62,7 +61,7 @@
     </section>
 }
 
-<partial name="_RecentlyUploadedBooksPartial" />
+<partial name="_RecentlyUploadedBooksPartial" style="margin-top:20px" />
 <partial name="_MostDownloadedBooksPartial" />
 
 
